--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@
 .env
 /view/node_modules/
 ###< symfony/framework-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
