--- a/compose.yaml
+++ b/compose.yaml
@@ -37,8 +37,8 @@ services:
       - CHOKIDAR_USEPOLLING=true  # Active le hot-reloading pour Docker
       - REACT_APP_TOKEN=d@t@ventureprojetM2123$  # Token pour l'application React
       - REACT_APP_API_URL=http://localhost:8083  # URL de l'API
-      - REACT_APP_ROLE_USER=R0L3_US3R  # Rôle utilisateur
-      - REACT_APP_ROLE_ADMIN=R0L3_@DM1N  # Rôle administrateur
+      - REACT_APP_ROLE_USER=ROLE_USER  # Rôle utilisateur
+      - REACT_APP_ROLE_ADMIN=ROLE_ADMIN  # Rôle administrateur
       - REACT_APP_ADMIN_ACCESS_TOKEN=35!3J*V5p$5Qf3y6EjzbUG&
 
   # Service phpMyAdmin avec plateforme spécifiée
